navBar api moved to ide-api for yaml plugin